map overlapping info-window & toggles solved with #mapid styling in body.css

--- a/css/body.css
+++ b/css/body.css
@@ -38,3 +38,9 @@
     right: 0;
     top: 0;
 }
+
+#mapid {
+  z-index: 1;
+  height: 100%;
+  width: 100%
+}
